--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "node": "^15.14.0"
-  },
-  "devDependencies": {
-    "cypress": "^5.3.0"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run",
+    "headTest": "npm run test --headed",
+    "chromeTest": "npx cypress run --headless --browser chrome",
+    "mochaReport": "npm run chromeTest --record --reporter mochawesome",
+    "specificTest": "npm run mochaReport -- --spec \"cypress/integration/examples/endToEnd_spec.js\"",
+    "RecordDashBoard":"node_modules\\.bin\\cypress run --record --key 43f28f3c-e700-40d8-9dbe-c93ee4a4bc23"
+
+
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/YuvarajMohanbabu/CypressTestScaffolding/issues"
   },
-  "homepage": "https://github.com/YuvarajMohanbabu/CypressTestScaffolding#readme"
+  "homepage": "https://github.com/YuvarajMohanbabu/CypressTestScaffolding#readme",
+  "dependencies": {
+ 
+    "cypress": "^5.3.0",
+    "mochawesome": "^6.2.2"
+    
+  }
 }
